--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "jsdomain-parser",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Parse URLs to extract TLDs, domain, protocols and more",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-json": "^6.1.0",
+    "jest": "^29.7.0",
     "rollup": "^2.79.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
